--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,28 @@ body {
 font-family: 'Roboto', sans-serif;
 }
 
+h1 {}
+
+h2 {}
+
+p {}
+
+img {}
+
+a:link {
+  text-decoration: none;
+}
+
+footer {}
+
 /*Layout Style*/
 
+.flex{}
+
+.card {}
 
 
 /*Media Queries*/
+
+/*Psuedo-classes*/
+a:hover {}
