--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,37 @@
 
 body {
 font-family: 'Roboto', sans-serif;
+color: black;
+text-decoration: none;
 }
+
+header {}
 
 h1 {}
 
-h2 {}
+h2 {
+  font-size: 1.5em;
+}
 
 p {}
 
+ul {
+  list-style: none;
+}
+
 img {}
 
-a:link {
+a {
   text-decoration: none;
 }
 
 footer {}
 
 /*Layout Style*/
+.main-nav {}
+
+
+.nav {}
 
 .flex{}
 
@@ -28,6 +42,23 @@ footer {}
 
 
 /*Media Queries*/
+@media (max-width: 1024x){
+  {
+  }
+}
+
+
+@media (max-width: 768px){
+{
+  float: none;
+  width: 100%;
+}
+
+}
+
+
+/* Float Clearfix*/
+
 
 /*Psuedo-classes*/
 a:hover {}
