--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,293 @@
 
 
-/*Base Styles*/
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+/*Body Styles------------------*/
 
 body {
 font-family: 'Roboto', sans-serif;
 color: black;
 text-decoration: none;
+margin: 0px;
+text-align: center;
 }
 
-header {}
+/* Header Styles ---------------*/
 
-h1 {}
 
-h2 {
-  font-size: 1.5em;
-}
-
-p {}
-
-ul {
+header {
+  max-width: 100%;
+  background-color: #f2f2f2;
+  padding: 1px,0,1px,0;
+  margin-bottom: 25px;
   list-style: none;
-}
-
-img {}
-
-a {
   text-decoration: none;
 }
 
-footer {}
+h1 {
+    text-align: center;
+    line-height: 2em;
+    margin: 5px, 0, 20px;
+    font-size: 1.8em;
+    letter-spacing: 2px;
+  }
 
-/*Layout Style*/
-.main-nav {}
+ul {
+  list-style: none;
+  text-decoration:none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-nav li{
+  text-transform: uppercase;
+  text-align: center;
+  background-color: white;
+  line-height: 3em;
+  font-size: .4em;
+  border: 2px solid #f2f2f2;
+  padding-left:50px;
+  padding-right:;
+
+}
+
+#intro {
+  font-size: .9em;
+  text-align: center;
+  padding-bottom: 20px;
+  margin-top: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
+  line-height: 1.5em;
+  font-size: .8em;
+}
+
+.profilepicture {
+  width: 50%;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.intro {
+  margin-top: 25px;
+}
+/* Main Styles---------------*/
+
+.container {
+display: flex;
+flex-direction: column;
+justify-content: center;
+text-align: center;
+}
 
 
-.nav {}
+.portfolio,
+#contact {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: .85em;
+  padding-top: 1px; /*review*/
+  padding-bottom: 10px;
+  margin-top: 0;
+  letter-spacing: .7px;
+}
 
-.flex{}
+h2 {
+  font-size: 1em;
+  margin-top: 10px;
+  letter-spacing: .7px;
+}
 
-.card {}
+img {
+  max-width: 100%;
+  height: auto;
+  padding: 30px;
+}
 
+p {
+  color: grey;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.container p {
+margin-left: 30px;
+margin-right: 30px;
+margin-bottom: 30px;
+line-height: 1.5em;
+font-size: .8em;
+}
+
+
+
+/*Footer Styles--------------*/
+.wrap {
+  background-color: #f2f2f2;
+}
+
+.contact {
+  margin-top: 30px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+
+.contact p,
+.address a{
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: .8em;
+  line-height: 1.5em;
+}
+
+.contact a {
+  color: grey;
+  line-height: 2.5em;
+}
+
+.address {
+  text-decoration: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  line-height: 3em;
+  margin-bottom: 10px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 25px;
+  border-top: 1px solid #e6e6e6;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.foot-name {
+  text-align: left;
+  width: 50%;
+}
+
+.foot-name {
+  font-size: .85em;
+}
+
+.foot-top {
+  text-transform: uppercase;
+  width: 50%;
+  text-align: right;
+  font-size: .81em;
+}
+
+.hide {
+  display: none;
+}
 
 /*Media Queries*/
-@media (max-width: 1024x){
-  {
-  }
+
+
+@media (min-width: 768px){
+
+header {
+    padding-top: 10px;
 }
 
+h1 {
+}
 
-@media (max-width: 768px){
-{
-  float: none;
+.main-nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  line-height: 1em;
+}
+
+.main-nav li {
+  display: inline-block;
+  background-color: #f2f2f2;
+}
+
+#intro {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.profilepicture {
+  order: 1;
+  width: 50%;
+  padding-left: 30px;
+  padding-bottom: 30px;
+}
+
+.intro {
+  padding: 30px;
+  font-size: 1.25em;
+  line-height: 1.5em;
+}
+
+.container {
   width: 100%;
+  flex-direction:row;
+  align-items:stretch;
+  flex-wrap: wrap;
+  padding: 0 10px;
+}
+
+.marketing,
+.search,
+.travel,
+.map,
+.gallery,
+.calculator {
+  width: 50%;
+  padding: 10px;
+}
+
+.contact {
+
+}
+
+#contact {
+  padding: 30px;
+}
+
+.foot-top {
+  display: none;
+}
+
+.hide {
+  display: flex;
+  flex-direction: row;
+  text-transform: uppercase;
+  font-size: .81em;
 }
 
 }
 
+}
+
+@media (min-width: 1024px){
+{
+}
+
+}
 
 /* Float Clearfix*/
 
+clear::after {
+  content: "";
+  diaplay: table;
+  clear: both;
+}
 
 /*Psuedo-classes*/
-a:hover {}
+a:hover {
+  color: teal;
+}
