--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,14 @@
 
 body {
 font-family: 'Roboto', sans-serif;
-color: black;
+color: grey;
 text-decoration: none;
 margin: 0px;
 text-align: center;
+}
+
+a:hover {
+  color: teal;
 }
 
 /* Header Styles ---------------*/
@@ -20,59 +24,53 @@ text-align: center;
 
 header {
   max-width: 100%;
-  background-color: #f2f2f2;
-  padding: 1px,0,1px,0;
+  background-color: #f9f9f9;
   margin-bottom: 25px;
   list-style: none;
   text-decoration: none;
 }
 
 h1 {
-    text-align: center;
-    line-height: 2em;
-    margin: 5px, 0, 20px;
+    line-height: 3em;
     font-size: 1.8em;
     letter-spacing: 2px;
+    margin: 0;
   }
 
 ul {
   list-style: none;
-  text-decoration:none;
   margin: 0;
   padding: 0;
 }
 
-.main-nav li{
+.main-nav {
+  padding:0 20px;
+}
+
+.main-nav li {
   text-transform: uppercase;
-  text-align: center;
   background-color: white;
   line-height: 3em;
-  font-size: .4em;
-  border: 2px solid #f2f2f2;
-  padding-left:50px;
-  padding-right:;
-
+  font-weight: 600;
+  font-size: 0.8em;
+  border: 2px solid #f9f9f9;
 }
 
 #intro {
-  font-size: .9em;
-  text-align: center;
   padding-bottom: 20px;
   margin-top: 25px;
-  margin-left: 30px;
-  margin-right: 30px;
-  line-height: 1.5em;
-  font-size: .8em;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .profilepicture {
-  width: 50%;
-  justify-content: center;
+  width: 70%;
   margin: 0 auto;
 }
 
 .intro {
-  margin-top: 25px;
+  line-height: 1.7em;
+  font-size: 1em;
 }
 /* Main Styles---------------*/
 
@@ -83,16 +81,15 @@ justify-content: center;
 text-align: center;
 }
 
-
 .portfolio,
 #contact {
   text-transform: uppercase;
   text-align: center;
-  font-size: .85em;
-  padding-top: 1px; /*review*/
-  padding-bottom: 10px;
+  font-size: 16px;
+  padding-top: 20px; /*review*/
   margin-top: 0;
   letter-spacing: .7px;
+  padding-bottom: 10px;
 }
 
 h2 {
@@ -104,16 +101,21 @@ h2 {
 img {
   max-width: 100%;
   height: auto;
-  padding: 30px;
+  padding: 20px;
 }
 
-p {
-  color: grey;
+h1,
+h3,
+.foot-name,
+#portfolio,
+.main-nav li,
+a {
+  color: #333;
 }
+
 
 a {
   text-decoration: none;
-  color: black;
 }
 
 .container p {
@@ -121,19 +123,19 @@ margin-left: 30px;
 margin-right: 30px;
 margin-bottom: 30px;
 line-height: 1.5em;
-font-size: .8em;
+font-size: 1em;
 }
 
 
 
 /*Footer Styles--------------*/
 .wrap {
-  background-color: #f2f2f2;
+  background-color: #f9f9f9;
 }
 
 .contact {
-  margin-top: 30px;
-  padding-top: 50px;
+  margin-top: 20px;
+  padding-top: 20px;
   padding-bottom: 30px;
 }
 
@@ -141,7 +143,7 @@ font-size: .8em;
 .address a{
   margin-left: 30px;
   margin-right: 30px;
-  font-size: .8em;
+  font-size: 1em;
   line-height: 1.5em;
 }
 
@@ -199,6 +201,7 @@ header {
 }
 
 h1 {
+
 }
 
 .main-nav {
@@ -207,11 +210,15 @@ h1 {
   flex-wrap: nowrap;
   justify-content: center;
   line-height: 1em;
+  font-size: 1.2em;
 }
 
 .main-nav li {
   display: inline-block;
-  background-color: #f2f2f2;
+  color: blue;
+  background-color: #f9f9f9;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 #intro {
@@ -222,22 +229,26 @@ h1 {
 .profilepicture {
   order: 1;
   width: 50%;
-  padding-left: 30px;
+  padding-left: 10px;
   padding-bottom: 30px;
+  padding-right: 10px;
 }
 
 .intro {
-  padding: 30px;
-  font-size: 1.25em;
-  line-height: 1.5em;
+  font-size: 1.2em;
+  text-align: left;
+  margin: 0;
+  padding-left: 10px;
+  padding-top: 15px;
+  padding-right: 40px;
 }
 
 .container {
   width: 100%;
-  flex-direction:row;
-  align-items:stretch;
+  flex-direction: row;
+  align-items: stretch;
   flex-wrap: wrap;
-  padding: 0 10px;
+  padding: 0;
 }
 
 .marketing,
@@ -258,6 +269,10 @@ h1 {
   padding: 30px;
 }
 
+.footer {
+  padding-bottom: 60px;
+}
+
 .foot-top {
   display: none;
 }
@@ -267,17 +282,104 @@ h1 {
   flex-direction: row;
   text-transform: uppercase;
   font-size: .81em;
+  list-style: none;
+}
+
+.hide a{
 }
 
 }
 
-}
 
 @media (min-width: 1024px){
-{
+
+header {
+  margin-bottom: 0;
 }
 
+.flex
+
+
+h1 {
+  width: 25%;
+  float: left;
+  padding-left: 15px;
 }
+
+h2, p {
+  color: grey;
+}
+
+
+.main-nav {
+  float: right;
+  padding-top: 20px;
+  font-size: 1.2em;
+  padding-right: 35px;
+}
+
+
+#intro {
+  padding: 0;
+}
+
+
+.intro {
+  margin-top:0;
+  text-align: left;
+  padding-left: 50px;
+}
+
+.profilepicture {
+  padding-right: 50px;
+}
+
+.profilepicture,
+.intro {
+  vertical-align: top;
+}
+
+.portfolio-wrapper {
+  background-color: #f9f9f9;
+  padding: 0 20px;
+}
+
+.portfolio {
+  background-color: #fff;
+}
+
+.container {
+  background-color: #fff;
+  padding: 0 20px;
+}
+
+.marketing,
+.search,
+.travel,
+.map,
+.gallery,
+.calculator {
+  width: 33.333333%;
+  padding: 0;
+}
+
+.container img {
+  padding: 10px;
+}
+
+
+.footer{
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.footer li{
+}
+
+.hide {
+
+}
+
 
 /* Float Clearfix*/
 
@@ -290,4 +392,5 @@ clear::after {
 /*Psuedo-classes*/
 a:hover {
   color: teal;
+}
 }
